--- a/dream-journey-user/src/main/resources/application.yml
+++ b/dream-journey-user/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       auto-commit: true
       idle-timeout: 30000
       pool-name: DatebookHikariCP
-      max-lifetime: 1800000
+      max-lifetime: 180000
       connection-timeout: 30000
     type: com.zaxxer.hikari.HikariDataSource
   mvc:
