--- a/dream-journey-common/pom.xml
+++ b/dream-journey-common/pom.xml
@@ -35,6 +35,11 @@
             <version>2.0.3.graal</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.10</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
