分类接口，新增分类接口调试

--- a/dream-journey-gateway/src/main/resources/application.yml
+++ b/dream-journey-gateway/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
             - Path=/api/user/**
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
+        - id: hotel_category_route
+          uri: lb://dream-journey-category
+          predicates:
+            - Path=/api/hotel/category/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
