--- a/dream-journey-category/src/main/resources/application.yml
+++ b/dream-journey-category/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: dream-journey-user
+    name: dream-journey-category
   datasource:
     url: jdbc:mysql://116.62.22.109:3306/dream_journey
     username: dreamss
@@ -31,7 +31,7 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
-        service: dream-journey-user
+        service: dream-journey-category
 
 mybatis-plus:
   mapper-locations: classpath:mappers/*.xml
