用户头像接口调试 更新用户信息接口调试

--- a/dream-journey-user/src/main/resources/application.yml
+++ b/dream-journey-user/src/main/resources/application.yml
@@ -46,3 +46,6 @@ mybatis-plus:
     db-config:
       id-type: assign_uuid
       update-strategy: not_null
+
+dream-journey:
+  file-path: /home/ftp/dream-journey
